# biopipen

./: .copilot-commit-message-instructions.md  .coveragerc  .editorconfig  .gitignore  .lintr  .pre-commit-config.yaml  404.html  MANIFEST.in  Makefile  README.md  board.toml  book.json  docs.py  generateDocs.py  index.html  mkdocs.yml  pyproject.toml  requirements.txt  search.html  setup.py  style.css  tox.ini
.github/workflows/: build.yml  ci.yml  docker.yml  docs.yml  release.yml
CHANGELOG/: index.html
api/biopipen.core/: index.html
api/biopipen.core.config/: index.html
api/biopipen.core.defaults/: index.html
api/biopipen.core.filters/: index.html
api/biopipen.core.proc/: index.html
api/biopipen.core.testing/: index.html
api/biopipen.ns/: index.html
api/biopipen.ns.bam/: index.html
api/biopipen.ns.bcftools/: index.html
api/biopipen.ns.bed/: index.html
api/biopipen.ns.cellranger/: index.html
api/biopipen.ns.cellranger_pipeline/: index.html
api/biopipen.ns.cnv/: index.html
api/biopipen.ns.cnvkit/: index.html
api/biopipen.ns.cnvkit_pipeline/: index.html
api/biopipen.ns.delim/: index.html
api/biopipen.ns.gene/: index.html
api/biopipen.ns.gsea/: index.html
api/biopipen.ns.misc/: index.html
api/biopipen.ns.pipseeker/: index.html
api/biopipen.ns.plot/: index.html
api/biopipen.ns.protein/: index.html
api/biopipen.ns.regulatory/: index.html
api/biopipen.ns.rnaseq/: index.html
api/biopipen.ns.scrna/: index.html
api/biopipen.ns.scrna_metabolic_landscape/: index.html
api/biopipen.ns.snp/: index.html
api/biopipen.ns.stats/: index.html
api/biopipen.ns.tcgamaf/: index.html
api/biopipen.ns.tcr/: index.html
api/biopipen.ns.vcf/: index.html
api/biopipen.ns.web/: index.html
api/biopipen.utils/: index.html
api/biopipen.utils.common_docstrs/: index.html
api/biopipen.utils.gene/: index.html
api/biopipen.utils.misc/: index.html
api/biopipen.utils.reference/: index.html
api/biopipen.utils.vcf/: index.html
bioaggrs/: common.py  expr.py  tfbs.py  wxs.py
biopipen/: __init__.py  _init.py  _params.py  bam.py  bcftools.py  bedtools.py  chipseq.py  cnvkit.py  fastx.py  gatk.py  gene.py  genomeplot.py  gsea.py  imtherapy.py  marray.py  misc.py  network.py  plot.py  power.py  rank.py  resource.py  stats.py  tabix.py  tcga.py  tcgamaf.py  tfbs.py  tsv.py  tumhet.py  vcf.py
biopipen/cli/: __init__.py  args.py  proxy.py  utils.py
biopipen/core/: args.py  args.toml  config.py  config.toml  defaults.py  envs.py  filters.py  params.py  params.toml  proc.py  testing.py  utils.py
biopipen/namespaces/: __init__.py  bam.py  bcftools.py  bed.py  csv.py  gene.py  gsea.py  misc.py  plot.py  rnaseq.py  scrna.py  scrna_metabolic.py  tcr.py  vcf.py  web.py
biopipen/ns/: bam.py  bcftools.py  bed.py  cellranger.py  cellranger_pipeline.py  cnv.py  cnvkit.py  cnvkit_pipeline.py  csv.py  delim.py  gene.py  gsea.py  misc.py  pipseeker.py  plot.py  protein.py  regulation.py  regulatory.py  rnaseq.py  scrna.py  scrna_basic.py  scrna_metabolic.py  scrna_metabolic_landscape.py  snp.py  stats.py  tcgamaf.py  tcr.py  vcf.py  web.py
biopipen/reports/: common.svelte  utils.liq
biopipen/sets/: expr.py  tfbs.py  wxs.py
biopipen/utils/: __init__.R  __init__.py  __init__.r  caching.R  common_docstrs.py  constants.py  constants.toml  gene.R  gene.py  gsea.R  io.R  misc.R  misc.py  mutate_helpers.R  plot.R  poll.R  poll.py  reference.py  reporter.py  repr.R  rnaseq.R  sampleinfo.py  sampleinfo.r  shell.py  shell2.py  single_cell.R  snp.py  (+2 more)
biopipen2/: __init__.py  __main__.py  algorithm.py  bed.py  bedtools.py  bwtool.py  cluster.py  common.py  eqtl.py  fastx.py  hic.py  mlearn.py  picard.py  plink.py  plot.py  rnaseq.py  sambam.py  seq.py  snp.py  snparray.py  sql.py  web.py
bioprocs/: __init__.py  _envs.py  algorithm.py  bcftools.py  bed.py  bedtools.py  bwtool.py  canev.py  chipseq.py  cluster.py  cnvkit.py  common.py  deg.py  docx.py  eqtl.py  fastx.py  gatk.py  gene.py  genomeplot.py  gsea.py  hic.py  imtherapy.py  marray.py  math.py  matrix.py  misc.py  mlearn.py  network.py  params.toml  pca.py  picard.py  plink.py  plot.py  power.py  rank.py  resource.py  rnaseq.py  sambam.py  seq.py  snp.py  (+22 more)
docker/: cleanup.list
docs/: CHANGELOG.md  DOCS.md  README.md  SUMMARY.md  algorithm.md  bed.md  bedtools.md  binaries.md  chipseq.md  cluster.md  cnvkit.md  common.md  eqtl.md  extra.js  fastx.md  gatk.md  gene.md  genomeplot.md  gsea.md  hic.md  marray.md  matrix.md  pca.md  picard.md  plot.md  power.md  processes.md  rank.md  requirements.txt  resource.md  rnaseq.md  sambam.md  seq.md  snp.md  snparray.md  sql.md  stats.md  style.css  tabix.md  tcga.md  (+12 more)
search/: search_index.json
tests/: .biopipen.toml  .coveragerc  __init__.py  addPath.py  biopipen  bioprocs  conftest.py  entrypoint.sh  helpers.py  prepare_scrna_metabolic.ipynb  run_test.sh  test.unittest.py  testAggrCommon.py  testAggrTFBS.py  testAlgorithm.py  testBed.py  testBedtools.py  testCluster.py  testCommon.py  testFastx.py  testGene.py  testGsea.py  testMarray.py  testPlot.py  testRnaseq.py  testSambam.py  testSeq.py  testSnp.py  testStats.py  testUtils.py  testVcf.py  testWeb.py  testWxs.py  test_bed_bed2vcf.py  test_gene_genenameconversion.py  test_gsea.py  test_gsea_fgsea.py  test_gsea_gsea.py  test_plot_heatmap.py  test_scrna_metabolic.py  (+9 more)
(+1911 files in other folders)
