[tool.poetry]
name = "biopipen"
version = "0.34.22"
description = "Bioinformatics processes/pipelines that can be run from `pipen run`"
authors = ["pwwang <pwwang@pwwang.com>"]
license = "MIT"

[tool.poetry.build]
generate-setup-file = true

[tool.poetry.dependencies]
python = "^3.9"
# # required by other plugins
# pipen = "^0.16"
pipen-filters = "^0.15"
pipen-cli-run = "^0.15"
pipen-verbose = "^0.14"
pipen-poplog = "^0.3"
pipen-deprecated = "^0.0"
datar = { version = "^0.15.8", extras = ["pandas"] }
pipen-board = { version = "^0.17", extras = ["report"] }
pipen-runinfo = { version = "^0.9", optional = true }

[tool.poetry.extras]
runinfo = ["pipen-runinfo"]

# [tool.poetry.dev-dependencies]

[tool.poetry.plugins.pipen_cli_run]
bam = "biopipen.ns.bam"
bed = "biopipen.ns.bed"
cellranger = "biopipen.ns.cellranger"
cellranger_pipeline = "biopipen.ns.cellranger_pipeline"
cnv = "biopipen.ns.cnv"
cnvkit = "biopipen.ns.cnvkit"
cnvkit_pipeline = "biopipen.ns.cnvkit_pipeline"
delim = "biopipen.ns.delim"
gene = "biopipen.ns.gene"
gsea = "biopipen.ns.gsea"
misc = "biopipen.ns.misc"
plot = "biopipen.ns.plot"
protein = "biopipen.ns.protein"
regulatory = "biopipen.ns.regulatory"
rnaseq = "biopipen.ns.rnaseq"
scrna = "biopipen.ns.scrna"
scrna_metabolic_landscape = "biopipen.ns.scrna_metabolic_landscape"
snp = "biopipen.ns.snp"
stats = "biopipen.ns.stats"
tcgamaf = "biopipen.ns.tcgamaf"
tcr = "biopipen.ns.tcr"
vcf = "biopipen.ns.vcf"
web = "biopipen.ns.web"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.pyright]
include = [ "biopipen/**/*.py" ]
