[project]
name = "biopipen"
version = "1.2.11"
description = "Bioinformatics processes/pipelines that can be run from `pipen run`"
authors = [{ name = "pwwang", email = "pwwang@pwwang.com" }]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    # required by other plugins
    "pipen-filters>=1.1.2,<2",
    "pipen-cli-run>=1.0,<2",
    "pipen-verbose>=1.1,<2",
    "pipen-poplog>=1.1,<2",
    "pipen-deprecated>=1.0,<2",
    "datar[pandas]>=0.15.8,<1",
    "pipen-board[report]>=1.1,<2",
]

[project.optional-dependencies]
runinfo = ["pipen-runinfo>=1.1,<2"]
log2file = ["pipen-log2file>=1.1,<2"]

[project.entry-points.pipen_cli_run]
bam = "biopipen.ns.bam"
bed = "biopipen.ns.bed"
cellranger = "biopipen.ns.cellranger"
cellranger_pipeline = "biopipen.ns.cellranger_pipeline"
cnv = "biopipen.ns.cnv"
cnvkit = "biopipen.ns.cnvkit"
cnvkit_pipeline = "biopipen.ns.cnvkit_pipeline"
delim = "biopipen.ns.delim"
gene = "biopipen.ns.gene"
gsea = "biopipen.ns.gsea"
misc = "biopipen.ns.misc"
pipseeker = "biopipen.ns.pipseeker"
plot = "biopipen.ns.plot"
protein = "biopipen.ns.protein"
regulatory = "biopipen.ns.regulatory"
rnaseq = "biopipen.ns.rnaseq"
scrna = "biopipen.ns.scrna"
scrna_metabolic_landscape = "biopipen.ns.scrna_metabolic_landscape"
snp = "biopipen.ns.snp"
stats = "biopipen.ns.stats"
tcgamaf = "biopipen.ns.tcgamaf"
tcr = "biopipen.ns.tcr"
vcf = "biopipen.ns.vcf"
web = "biopipen.ns.web"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["biopipen"]

[tool.black]
line-length = 88
target-version = ['py39', 'py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.pyright]
include = [ "biopipen/**/*.py" ]

[dependency-groups]
docs = [
    "mkapi-fix>=0.1.1",
    "mkdocs>=1.6.1",
    "mkdocs-rtd>=0.0.15",
    "mygene>=3.2.2",
    "pymdown-extensions>=10.21.2",
]
